--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           </button>
           <audio data-key="A" src="music\crash_a.wav"></audio>
           <audio data-key="S" src="music\floor-tom_s.wav"></audio>
-          <audio data-key="D" src="music\hi-hat-close_d.wav"></audio>
-          <audio data-key="F" src="music\hi-hat-open_f.wav"></audio>
+          <audio data-key="D" src="music\mid-tom_d.wav"></audio>
+          <audio data-key="F" src="music\kick_f.wav"></audio>
           <audio data-key="G" src="music\high-tom_g.wav"></audio>
-          <audio data-key="H" src="music\kick_h.wav"></audio>
-          <audio data-key="J" src="music\mid-tom_j.wav"></audio>
-          <audio data-key="K" src="music\ride_k.wav"></audio>
-          <audio data-key="L" src="music\snare_l.wav"></audio>
+          <audio data-key="H" src="music\ride_h.wav"></audio>
+          <audio data-key="J" src="music\hi-hat-close_j.wav"></audio>
+          <audio data-key="K" src="music\snare_k.wav"></audio>
+          <audio data-key="L" src="music\hi-hat-open_l.wav"></audio>
         </div>
       </div>
     </div>
